--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,9 @@
   letter-spacing: -0.19px;
   text-align: center;
   overflow-x: hidden;
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto auto 1fr;
 }
 @media (min-width: 635px) {
   .body {
